# gRPC

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  docker-compose.yml  extensions.txt
client/: CMakeLists.txt  Dockerfile  client.cpp
server/: CMakeLists.txt  Dockerfile  entrypoint.sh  server.cpp
